# droogtemonitor

./: .gitignore  README.md  pyproject.toml
interactief-droogtemonitor/: Interactief-Droogtemonitor.py
interactief-droogtemonitor/data/: rdev_tijdreeks.txt
