[project]
name = "interactief-droogtemonitor"
version = "0.1.0"
description = "Streamlit application to interactively explore drought data from the KNMI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]
